fixed error image cannot load

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     
         <nav style="position: fixed; width: 100%; z-index: 9;" class="navbar navbar-fixed-top navbar-light navbar-expand-md bg-faded justify-content-center">
-            <a href="/" class="navbar-brand d-flex w-50 mr-auto"><img class="gaspier2" src="assets/images/gp-logo.png" alt="Brand Logo"><img class="gaspier" id="gas" src="/assets/images/gaspier-logo-type.png" alt="Brand Logo"></a>
+            <a href="" class="navbar-brand d-flex w-50 mr-auto"><img class="gaspier2" src="./assets/images/gp-logo.png" alt="Brand Logo"><img class="gaspier" id="gas" src="./assets/images/gaspier-logo-type.png" alt="Brand Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
                 <span class="navbar-toggler-icon"></span>
             </button>
