--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, user-scalable=no">
     <meta name="description" content="Online ordering solution for the fuel industry">
     <meta name="keywords" content="FuelOrdering, GasPier, Fuel, Gas, Ordering, Onlinegas">
     <title>GasPier</title>
